# zkmove-lite

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
cli/: Cargo.toml
cli/src/: README.md  main.rs
common/error/: Cargo.toml
common/error/src/: lib.rs
common/logger/src/: lib.rs
docs/: conditional_branch.md
functional-tests/: Cargo.toml
functional-tests/src/: lib.rs  run_config.rs
functional-tests/tests/: testsuite.rs
functional-tests/tests/scripts/: div_u8.move  mod_u8.move  sub_u8.move
movelang/: Cargo.toml
movelang/src/: argument.rs  compiler.rs  lib.rs  loader.rs  state.rs  value.rs
scripts/: dev_setup.sh
vm/: Cargo.toml
vm/src/: chip_tests.rs  circuit.rs  evaluation_chip.rs  frame.rs  instructions.rs  interpreter.rs  lib.rs  locals.rs  program_block.rs  runtime.rs  stack.rs  value.rs
vm/src/chips/: arithmetic.rs  chip_tests.rs  conditional_select.rs  evaluation_chip.rs  instructions.rs  logical.rs  mod.rs  utilities.rs
vm/src/chips/instructions/: _mod.rs  add.rs  and.rs  common.rs  div.rs  eq.rs  lt.rs  mul.rs  neq.rs  not.rs  or.rs  sub.rs
